# vasp-grace-tensorpotential

./: .gitignore  INSTALL.md  LICENSE  PACKAGE_GUIDE.md  README.md  REFACTORING_SUMMARY.md  dislocation.py  lihopping.py  main.py  moire.py  phonon_berry.py  pyproject.toml  requirements.txt  setup.py  test_modules.py  topology.py  writer.py
.github/workflows/: pylint.yml
docs/: GRACE_MODELS.md  INSTALLATION.md
examples/: finetune_foundation_model.yaml  grace2l_from_scratch.yaml  run_full_workflow.sh
scripts/: collect_vasp_dataset.py  generate_gracemaker_input.py  grace_ase_calculator.py  grace_lammps_input.py  validate_grace_model.py  vasp_to_extxyz.py
src/vasp_grace/: __init__.py  active_learning.py  montecarlo.py  thermal_conductivity.py  topological_phonons.py
tests/: CONTCAR  ELASTIC_fit_info.txt  INCAR_MD  INCAR_OPT  INCAR_PHON  KPOINTS  OSZICAR  OUTCAR  POSCAR  POTCAR  XDATCAR  grace_opt.traj  test_modules.py  test_vasp_grace.py
